--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   <title>Frontend Mentor | Age calculator app</title>
 
@@ -19,8 +17,11 @@
 </head>
 <body>
   <div class="container">
+    <div class="wrapper">
+      <div class="inner-wrapper">
   <div class="input-field">
   <form id="age-form" action="submit">
+    <div class="flex-container">
     <div>
     <label class="uppercase">Day</label>
     <input id="day" type="text" placeholder="DD">
@@ -36,9 +37,14 @@
     <input id="year" type="text" placeholder="YYYY">
     <p id="year-error" class="error-message"></p>
   </div>
+</div>
+
+<div class="section-separation">
+<hr>
   <button type="submit">
   <img src="./assets/images/icon-arrow.svg" class="arrow-icon" alt="arrow-icon">
 </button>
+</div>
 </form>
 </div>
 
@@ -47,6 +53,8 @@
   <div><p id="month-display" class="age-display">--</p>month</div>
   <div><p id="day-display" class="age-display">--</p>days</div>
 
+</div>
+</div>
 </div>
 </div>
 
