mobile responsiveness ready

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
   <form id="age-form" action="submit">
     <div class="flex-container">
     <div>
-    <label class="uppercase">Day</label>
+    <label id="day-label" class="uppercase">Day</label>
     <input id="day" type="text" placeholder="DD">
     <p id="day-error" class="error-message"></p>
   </div>
   <div>
-    <label class="uppercase">Month</label>
+    <label id="month-label" class="uppercase">Month</label>
     <input id="month" type="text" placeholder="MM">
     <p id="month-error" class="error-message"></p>
   </div>
   <div>
-    <label class="uppercase">Year</label>
+    <label id="year-label" class="uppercase">Year</label>
     <input id="year" type="text" placeholder="YYYY">
     <p id="year-error" class="error-message"></p>
   </div>
